kyverno/C0004-container-liveness-probe/policy-C0004.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-C0004
  annotations:
    policies.kyverno.io/title: portefaix-C0004
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      Liveness probe need to be configured to correctly manage a pods
      lifecycle during deployments, restarts, and upgrades. For each pod,
      a periodic `livenessProbe` is performed by the kubelet to determine
      if the pod's containers are running or need to be restarted
spec:
  validationFailureAction: audit
  rules:
  - name: validate-liveness-probe
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Liveness probe is required."
      pattern:
        spec:
          containers:
          - livenessProbe:
              periodSeconds: "?*"
